[tool.poetry]
name = "offline-slashing-risk"
version = "0.1.0"
description = ""
authors = ["Irina katunina <irina.k@p2p.org>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pandas = "1.4.1"
numpy ="^1.20.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
